# apneia-tutorial

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/brand/: colors_and_type.css
components/: diagramas.py  glossario.py  graficos.py  navegacao.py  quiz.py  recursos.py  ui.py
dados/: antunes_2023.py
modulos/: glossario_pagina.py  m00_introducao.py  m01_anatomia.py  m02_sono.py  m03_saos.py  m04_diagnostico.py  m05_tratamentos.py  m06_plano_cirurgico.py  m07_prevencao.py  m08_pos_operatorio.py
scripts/: exportar_para_validacao.py  validar_com_gemini.py  validar_com_medlm.py
