[project]
name = "apneia"
version = "0.1.0"
description = "Tutorial educativo sobre SAOS e cirurgia multinível"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "plotly",
    "pandas",
]

[project.optional-dependencies]
# Apenas necessários para scripts/validar_com_*.py — não para a app
validacao = [
    "google-cloud-aiplatform>=1.151.0",
    "google-genai>=1.75.0",
]
